load("@rules_deb//distroless:defs.bzl", "flatten")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@sonic_build_infra//python:site_packages.bzl", "site_packages")
load("@tar.bzl", "tar")

# =============================================================================
# docker-platform-monitor (pmon): platform monitoring daemons + sensors stack.
#
# Mirrors dockers/docker-platform-monitor/Dockerfile.j2 + rules/docker-platform-monitor.mk.
#
# KNOWN LIMITATIONS (documented per task instructions; do NOT try to fix here):
#
# 1. SONIC_PLATFORM_API_PY3 is platform-specific (mellanox / nvidia-bluefield)
#    and is NOT included in this generic image. Per-platform images that need
#    it ship the wheel via /usr/share/sonic/platform/sonic_platform-*.whl,
#    which docker_init.sh installs at runtime.
#
# 2. PDDF_PLATFORM_API_BASE_PY3 (sonic_platform_pddf_common) is conditional on
#    PDDF_SUPPORT=y in rules/docker-platform-monitor.mk. This build migrates the
#    wheel at platform/pddf/platform-api-pddf-base, so it IS included in
#    python_layer below — matching the PDDF-enabled Make image (target/docker-
#    platform-monitor.gz installs sonic_platform_pddf_common-1.0). For a strict
#    non-PDDF image, drop the @sonic-platform-pddf-common//:install line.
#

# Dockerfile.j2 lines 16-37: runtime apt-get install. build-essential and
# python3-dev are build-only (purged at lines 105-107) and are not shipped.
# librrd-dev is also build-only (only the C headers, needed to compile Python
# rrdtool bindings at wheel-build time; the runtime lib is librrd8t64). All
# packages below are declared in the shared @trixie apt pool
# (dockers/docker-base-trixie/base_trixie.MODULE.bazel). Architecture:all
# packages (python3-*) use the `:data` alias — the bare label leaks arm64 into
# amd64 images (rules_distroless bug documented in docker-base-trixie/BUILD.bazel).
flatten(
    name = "apt_layer",
    deduplicate = True,
    tars = [
        "@trixie//ipmitool",
        "@trixie//librrd8t64",
        "@trixie//rrdtool",
        "@trixie//python3-smbus:data",
        "@trixie//i2c-tools",
        "@trixie//psmisc",
        "@trixie//python3-netifaces:data",
        "@trixie//python3-bottle:data",
        "@trixie//libpci3",
        "@trixie//nvme-cli",
        "@trixie//xxd",
        "@trixie//smartmontools",
        "@trixie//dmidecode",
        "@trixie//iputils-ping",
        "@trixie//pciutils",
        "@trixie//ethtool",
    ],
)

# rules/docker-platform-monitor.mk _DEPENDS:
#   LIBSENSORS, LM_SENSORS, FANCONTROL, SENSORD, LIBSWSSCOMMON, PYTHON3_SWSSCOMMON.
# libswsscommon / python3-swsscommon are already in the parent
# docker-config-engine-trixie layer; re-listing them here matches the legacy
# build's redundant dpkg -i and costs only a deduped layer.
#
# Each deb ships both `_data` (file contents) and `_statusd` (dpkg status.d
# stub) so `dpkg -l` inside the container lists them. For the lm-sensors family
# the `_data` label is an alias onto the @lm_sensors_apt re-wrap; the `_statusd`
# label is generated by the sonic_deb macro that wraps each package.
flatten(
    name = "sonic_pkgs",
    deduplicate = True,
    tars = [
        # lm-sensors family from src/lm-sensors.
        "@lm-sensors//:libsensors5_3.6.0-7.1.deb_data",
        "@lm-sensors//:libsensors5_3.6.0-7.1.deb_statusd",
        "@lm-sensors//:lm-sensors_3.6.0-7.1.deb_data",
        "@lm-sensors//:lm-sensors_3.6.0-7.1.deb_statusd",
        "@lm-sensors//:fancontrol_3.6.0-7.1_all.deb_data",
        "@lm-sensors//:fancontrol_3.6.0-7.1_all.deb_statusd",
        # sensord — built by src/lm-sensors.
        "@lm-sensors//:sensord_3.6.0-7.1.deb_data",
        "@lm-sensors//:sensord_3.6.0-7.1.deb_statusd",
        # libswsscommon + python3-swsscommon (re-listed; deduped against parent).
        "@sonic-swss-common//:libswsscommon_1.0.0.deb_data",
        "@sonic-swss-common//:libswsscommon_1.0.0.deb_statusd",
        "@sonic-swss-common//:python3-swsscommon_1.0.0.deb_data",
        "@sonic-swss-common//:python3-swsscommon_1.0.0.deb_statusd",
    ],
)

# Dockerfile.j2 lines 54-77: pip3 install grpcio==1.71.0, grpcio-tools==1.71.0,
# thrift==0.13.0, requests, python-dateutil==2.9.0.post0, libpci, psutil,
# blkinfo, smbus2. These are pinned in dockers/docker-base-trixie/pyproject.toml
# and sourced from the shared @pip_pmon8 hub. netifaces is NOT here — this pmon
# uses the apt python3-netifaces package (see apt_layer above) instead of the
# pip package.
site_packages(
    name = "pip_layer",
    srcs = [
        "@pip_pmon8//grpcio",
        "@pip_pmon8//grpcio_tools",
        "@pip_pmon8//thrift",
        "@pip_pmon8//requests",
        "@pip_pmon8//python_dateutil",
        "@pip_pmon8//libpci",
        "@pip_pmon8//psutil",
        "@pip_pmon8//blkinfo",
        "@pip_pmon8//smbus2",
        # jsonschema — Make pip-installs it into pmon (transitive dep). Pinned
        # to 2.6.0 in docker-base-trixie/pyproject.toml.
        "@pip_pmon8//jsonschema",
    ],
    venv = "docker-base-trixie",
)

# Single Python content layer: pip layer (third-party packages) + every
# sonic-platform-daemons sub-wheel + sonic-platform-common + sonic-py-common +
# sonic-config-engine. flatten(deduplicate=True) drops any duplicate path
# coming from a parent image's :python_layer (e.g. sonic-py-common is already
# in docker-config-engine-trixie; re-shipping is a no-op after dedup).
#
# rules/docker-platform-monitor.mk _PYTHON_WHEELS:
#   SONIC_PLATFORM_COMMON_PY3, SONIC_PY_COMMON_PY3, SONIC_CONFIG_ENGINE_PY3,
#   SONIC_PLATFORM_API_PY3, SONIC_LEDD_PY3, SONIC_PCIED_PY3, SONIC_PSUD_PY3,
#   SONIC_SYSEEPROMD_PY3, SONIC_THERMALCTLD_PY3, SONIC_SENSORMOND_PY3,
#   SONIC_XCVRD_PY3, SONIC_YCABLED_PY3, SONIC_CHASSISD_PY3, SONIC_STORMOND_PY3,
#   SONIC_BMCCTLD_PY3.
# SONIC_PLATFORM_API_PY3 is excluded — see limitation #1.
flatten(
    name = "python_layer",
    deduplicate = True,
    tars = [
        ":pip_layer",
        # thrift.protocol.fastbinary C++ acceleration extension. The pip layer
        # ships pure-Python thrift but aspect classified it py3-none-any and
        # never compiled fastbinary; we build it from the sdist with hermetic
        # GCC (see root MODULE.bazel @thrift_fastbinary_src + thrift_fastbinary.
        # BUILD) and lay it into dist-packages/thrift/protocol/, matching Make.
        "@thrift_fastbinary_src//:fastbinary_install",
        "@sonic-platform-common//:install",
        "@sonic-py-common//:install",
        "@sonic-config-engine//:install",
        "@sonic-platform-daemons//sonic-ledd:install",
        "@sonic-platform-daemons//sonic-pcied:install",
        "@sonic-platform-daemons//sonic-psud:install",
        "@sonic-platform-daemons//sonic-syseepromd:install",
        "@sonic-platform-daemons//sonic-thermalctld:install",
        "@sonic-platform-daemons//sonic-sensormond:install",
        "@sonic-platform-daemons//sonic-xcvrd:install",
        "@sonic-platform-daemons//sonic-ycabled:install",
        "@sonic-platform-daemons//sonic-chassisd:install",
        "@sonic-platform-daemons//sonic-stormond:install",
        "@sonic-platform-daemons//sonic-bmcctld:install",
        # PDDF_PLATFORM_API_BASE_PY3 (PDDF_SUPPORT=y). Migrated wheel at
        # platform/pddf/platform-api-pddf-base.
        "@sonic-platform-pddf-common//:install",
    ],
)

# Dockerfile.j2 lines 109-115: COPY directives + mkdir.
# - lm-sensors.sh                             -> /usr/bin/lm-sensors.sh
# - docker-pmon.supervisord.conf.j2           -> /usr/share/sonic/templates/
# - docker_init.j2                            -> /usr/share/sonic/templates/
# - ssd_tools/SmartCmd, ssd_tools/iSmart      -> /usr/bin/
# - critical_processes                        -> /etc/supervisor/critical_processes
# - etc/rsyslog.conf                          -> /etc/rsyslog.conf
# - mkdir -p /usr/share/stormond              -> declared via mtree type=dir
#
# The Dockerfile.j2 has no `files/supervisor-proc-exit-listener` COPY — the
# script ships via the parent
# docker-config-engine-trixie image (@sonic-supervisord-utilities//:install
# lays /usr/local/bin/supervisor-proc-exit-listener), so it is not re-copied
# here.
#
# Dockerfile.j2 line 116 generates the entrypoint script at BUILD time:
#   sonic-cfggen -a '{"CONFIGURED_PLATFORM":"..."}' -t docker_init.j2 > /usr/bin/docker_init.sh
# docker_init.j2's only template variable is CONFIGURED_PLATFORM (three
# platform-specific {% if %} branches: aspeed / mellanox / nvidia-bluefield).
# For the generic trixie image CONFIGURED_PLATFORM is empty, so none of those
# branches activate — the safe default. We render it at build time here (via
# the shared jinja2 render tool) and ship the result as /usr/bin/docker_init.sh,
# fixing the previous assumption that it would be "generated on first start"
# (nothing generated it, so the entrypoint /usr/bin/docker_init.sh was missing
# and the container could not start).
genrule(
    name = "docker_init_sh",
    srcs = ["docker_init.j2"],
    outs = ["docker_init.sh"],
    cmd = "$(execpath @sonic_build_infra//jinja2:render) $(location docker_init.j2) $@ CONFIGURED_PLATFORM=",
    tools = ["@sonic_build_infra//jinja2:render"],
)

# delay.py is referenced by docker-pmon.supervisord.conf.j2 (program:delay)
# at /usr/bin/delay.py — copied here to match the legacy build, which relied on
# the file landing in /usr/bin via the build_templates COPY pass.
tar(
    name = "files",
    srcs = [
        "lm-sensors.sh",
        "docker-pmon.supervisord.conf.j2",
        ":docker_init_sh",
        "ssd_tools/SmartCmd",
        "ssd_tools/iSmart",
        "critical_processes",
        "etc/rsyslog.conf",
        "delay.py",
    ],
    mtree = [
        "./usr/bin/lm-sensors.sh uid=0 gid=0 mode=0755 type=file content=$(location :lm-sensors.sh)",
        "./usr/share/sonic/templates/docker-pmon.supervisord.conf.j2 uid=0 gid=0 mode=0644 type=file content=$(location :docker-pmon.supervisord.conf.j2)",
        # Rendered entrypoint (Dockerfile.j2:116 equivalent), executable.
        "./usr/bin/docker_init.sh uid=0 gid=0 mode=0755 type=file content=$(location :docker_init_sh)",
        "./usr/bin/SmartCmd uid=0 gid=0 mode=0755 type=file content=$(location :ssd_tools/SmartCmd)",
        "./usr/bin/iSmart uid=0 gid=0 mode=0755 type=file content=$(location :ssd_tools/iSmart)",
        "./etc/supervisor/critical_processes uid=0 gid=0 mode=0644 type=file content=$(location :critical_processes)",
        "./etc/rsyslog.conf uid=0 gid=0 mode=0644 type=file content=$(location :etc/rsyslog.conf)",
        "./usr/bin/delay.py uid=0 gid=0 mode=0755 type=file content=$(location :delay.py)",
        # mkdir -p /usr/share/stormond (Dockerfile.j2 line 115).
        "./usr/share/stormond uid=0 gid=0 mode=0755 type=dir",
    ],
)

oci_image(
    name = "docker-platform-monitor",
    # Dockerfile.j2 line 2: FROM docker-config-engine-trixie.
    base = "//dockers/docker-config-engine-trixie:docker-config-engine-trixie",
    # Dockerfile.j2 line 130: ENTRYPOINT ["/usr/bin/docker_init.sh"].
    # docker_init.sh is rendered at build time by the :docker_init_sh genrule
    # (from docker_init.j2, CONFIGURED_PLATFORM empty) and shipped at
    # /usr/bin/docker_init.sh via the :files tar — mirroring Dockerfile.j2:116.
    entrypoint = ["/usr/bin/docker_init.sh"],
    env = {"DEBIAN_FRONTEND": "noninteractive"},
    tars = [
        ":apt_layer",
        ":sonic_pkgs",
        ":python_layer",
        ":files",
    ],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "load",
    image = "docker-platform-monitor",
    repo_tags = ["docker-platform-monitor:latest"],
)
